--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.post=8080
 
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/safepaws_db
+spring.datasource.url=jdbc:mysql://localhost:3306/safe_paws
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
