--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=Safe-Paws-Rest-API-App
 server.post=8080
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/safe_paws
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
